--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <header class="text-center mt-5">
         <h1>Welcome to My Portfolio</h1>
         <p>Explore my projects and learn more about my work.</p>
-        <img src="images/profile.jpg" alt="Profile Image" class="rounded-circle" width="200">
+        <img src="https://via.placeholder.com/200" alt="Profile Image" class="rounded-circle">
         <br>
         <a href="portfolio.html" class="btn btn-primary mt-3">View My Work</a>
     </header>
