Finalized homepage with image and styling

--- a/about.html
+++ b/about.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>About Me</h1>
-    <p>Hello! I am [Your Name], a passionate web developer with experience in HTML, CSS, and Bootstrap.</p>
+    <p>Hello! I am Wanjiang Xie, a passionate web developer with experience in HTML, CSS, and Bootstrap.</p>
 </body>
 </html>
